# minidump-writer

./: .agent-info  .aider.chat.history.md  .aider.input.history  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONVENTIONS.md  CRUSH.md  Cargo.toml  DECISIONS.md  DETAILED_COMPARISON_MAC_VS_APPLE_MAC.md  GEMINI.md  OVERVIEW.md  PRD.md  REFACTORING.md  TASKS.md  build.rs
.agent-checklists/: architect-forge-T-010.md
.aider.tags.cache.v4/: cache.db
.cargo/: config.toml  ios-runner.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  claude-mentions.yml  claude-pr-review.yml
examples/: ios_platform_info.rs
src/: ios.rs  lib.rs  mac.rs
src/apple/: mod.rs
src/apple/common/: errors.rs  mach.rs  mod.rs  task_dumper.rs  task_dumper_base.rs  types.rs
src/apple/common/streams/: memory_list.rs  (+3 more)
src/apple/ios/: crash_context.rs  minidump_writer.rs  mod.rs  task_dumper.rs
src/apple/mac/: errors.rs  minidump_writer.rs  mod.rs  streams.rs  task_dumper.rs
src/ios/: crash_handler.rs  errors.rs  minidump_writer.rs  mod.rs  system_info.rs  task_dumper.rs
src/ios/tests/: crash_handler_tests.rs  minidump_writer_tests.rs  mod.rs  system_info_tests.rs  task_dumper_tests.rs
src/linux/: maps_reader.rs  ptrace_dumper.rs  thread_info.rs
test-apps/minidump-test-cli/: Cargo.toml  README.md  build-ios-sim.sh
test-apps/minidump-test-cli/src/: main.rs
tests/: ios_crash_context_test_example.rs  ios_integration_test.rs  ios_minidump_writer.rs  linux_minidump_writer.rs  mac_minidump_writer.rs  ptrace_dumper.rs  task_dumper.rs  test_ios_build.rs  test_ios_safety.rs
(+17 files in other folders)
